--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #Data Source Properties
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/buildingStore
+spring.datasource.url = jdbc:postgresql://localhost:5432/PD
 spring.datasource.username = postgres
-spring.datasource.password = lansepup1
+spring.datasource.password = rutppoptop
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql = FALSE
-spring.jpa.properties.hibernate.show_sql = false
+spring.jpa.properties.hibernate.show_sql = FALSE
 spring.jpa.hibernate.ddl-auto = create
 
 #Disable the default loggers
